--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel=" stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>this is V5</h2>
+    <h2>this is  design V5</h2>
 </body>
 </html>
